objects/Pen_Order__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_same_as_Shipping_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing same as Shipping address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Cost__c</fullName>
        <label>Order Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pen</label>
        <referenceTo>Pen__c</referenceTo>
        <relationshipLabel>Pen Orders</relationshipLabel>
        <relationshipName>Pen_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pen_Order_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pen Order</label>
    <nameField>
        <label>Pen Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pen Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>